@@ -1,3 +1,8 @@
+2010-10-11 S. Thiell <stephane.thiell@cea.fr>
+
+	* Worker/Worker.py: Add Worker.abort() base method and ensure proper
+	implementation in all workers (trac ticket #63).
+
 2010-10-10 S. Thiell <stephane.thiell@cea.fr>
 
 	* Worker/Worker.py: WorkerBadArgumentError exception is now
